<resources>
    <string name="app_name">云朵智慧家</string>
    <string name="about_title">云朵•智慧•家  </string>
    <string name="about_updating">正在更新中...</string>
    <string name="about_click_update">点击更新 </string>
    <string name="about_have_updated">已经是最新版本</string>
    <string name="about_get_version_fail">获取版本信息失败</string>
    <string name="about_install_new_version">新版本下载完成请安装新版本</string>
    <string name="about_updating_waiting">版本更新中 请稍候</string>
    <string name="about_canot_get_version">暂未获取到最新版本</string>
    <string name="about_title_site">网址</string>
    <string name="about_value_site">www.indeo.cn</string>
    <string name="about_title_phone">电话</string>
    <string name="about_value_phone">+86 028 87820707</string>
    <string name="about_title_address">地址</string>
    <string name="about_value_address">四川省成都市高新西区百叶路1号</string>
    <string name="about_value_company">成都云朵技术有限公司版权所有</string>
    <string name="about_fireware_update">固件升级</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="receptacle_tw_page">插座</string>
    <string name="light_tw_page">灯光</string>
    <string name="add_device">添    加</string>
    <string name="add_timing">定时</string>
    <string name="add_modelair_timing">添加定时</string>
    <string name="shoe_password">显示密码</string>
    <string name="custom">自定义</string>
    <string name="tv_bt_back">返回</string>
    <string name="tv_tw_page">电视机</string>
    <string name="tv_bt_define">自定义</string>
    <string name="tv_bt_home">主页</string>
    <string name="tv_bt_tv">TV/AV</string>
    <string name="share_app_tw_page">APP下载链接</string>
    <string name="userbook_app_tw_page">使用手册</string>
    <string name="share_app_bt_shareMessage">短信分享</string>
    <string name="share_app_bt_shareWinxin">微信分享</string>
    <string name="share_app_btn_share">分享</string>
    <string name="share_app_btn_canl">取消</string>
    <string name="share_app_dialog_text">你将分享这一个应用给好友....</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="configuration_wifi_tw_page">配置设备</string>
    <string name="configuration_wifi_streng">wifi增强设置</string>
    <string name="configuration_wifi_tw_account">Wifi账号</string>
    <string name="configuration_wifistreng_devicename">中继WiFi</string>
    <string name="configuration_wifistreng_devicepassword">中继密码 </string>
    <string name="configuration_wifistreng_input_devicepassword">输入中继WiFi密码 </string>
    <string name="configuration_wifistreng_input_input_devicename">输入中继WiFi名称 </string>
    <string name="configuration_wifi_et_account_hint">在这里键入您的wifi账号!</string>
    <string name="configuration_wifi_tw_password">密码</string>
    <string name="configuration_wifi_et_password_hint">在这里键入wifi密码.!</string>
    <string name="configuration_wifi_cb_show_password">显示密码</string>
    <string name="configuration_wifi_bt_start_configuration">开始配置</string>
    <string name="configuration_wifi_success">配置成功</string>
    <string name="tv_dialog_title">按键学习</string>
    <string name="tv_dialog_single">单键学习</string>
    <string name="tv_dialog_manyKey">组合键学习</string>
    <string name="tv_bt_num1">1</string>
    <string name="tv_bt_num2">2</string>
    <string name="tv_bt_num3">3</string>
    <string name="tv_bt_num4">4</string>
    <string name="tv_bt_num5">5</string>
    <string name="tv_bt_num6">6</string>
    <string name="tv_bt_num7">7</string>
    <string name="tv_bt_num8">8</string>
    <string name="tv_bt_num9">9</string>
    <string name="tv_bt_num0">0</string>
    <string name="tv_bt_contro">控制</string>
    <string name="tv_bt_study">学习</string>
    <string name="tv_study_success">学习成功</string>
    <string name="tv_contro_success">控制成功</string>
    <string name="tv_off_line">离线</string>
    <string name="tv_studing">请按遥控器对应按键学习!</string>
    <string name="tv_page_error">页面错误</string>
    <string name="air_bt_wind_speed">风速</string>
    <string name="air_bt_wind_direction">风向</string>
    <string name="air_bt_wind_model">模式</string>
    <string name="air_bt_go_back">返回</string>
    <string name="air_bt_study">学习</string>
    <string name="air_bt_control">控制</string>
    <string name="air_condition_tw">空调</string>
    <string name="air_bt_model">模式</string>
    <string name="sound_tw">音响</string>
    <string name="sound_bt_study">学习</string>
    <string name="sound_bt_defind">自定义</string>
    <string name="sound_bt_go_back">返回</string>
    <string name="sound_bt_control">控制</string>
    <string name="setting_up_tw">设置</string>
    <string name="setting_up_tw_deploy_facility">配置设备</string>
    <string name="setting_up_tw_data_share">数据分享</string>
    <string name="setting_up_tw_data_get">数据获取</string>
    <string name="setting_up_tw_key_shake">按键震动</string>
    <string name="setting_up_tw_key_sound">按键声音</string>
    <string name="setting_up_tw_app_dowload_link">下载链接</string>
    <string name="setting_up_tw_often_matter">常见问题</string>
    <string name="setting_up_tw_user_notebook">用户手册</string>
    <string name="setting_up_tw_one_key_del">一键删除</string>
    <string name="setting_up_tw_about_yunduo">关于云朵</string>
    <string name="setting_up_bt_go_back">返回</string>
    <string name="combination_key_study_tw">组合键学习</string>
    <string name="combination_key_study_tw_custom_name">自定义名称</string>
    <string name="combination_key_study_tw_project">项目</string>
    <string name="combination_key_study_tw_project_number1">1</string>
    <string name="combination_key_study_tw_project_number2">2</string>
    <string name="combination_key_study_tw_project_number3">3</string>
    <string name="combination_key_study_tw_project_number4">4</string>
    <string name="combination_key_study_tw_project_number5">5</string>
    <string name="combination_key_study_tw_project_number6">6</string>
    <string name="combination_key_study_tw_interval_time">间隔时间</string>
    <string name="combination_key_study_tw_interval_number">0.5</string>
    <string name="delete">删除</string>
    <string name="home_interface">智能遥控</string>
    <string name="alter">修改</string>
    <string name="add_newSeting">添加遥控器</string>
    <string name="configuration_wifi_sms">短信分享</string>
    <string name="configuration_wifi_email">微信分享</string>
    <string name="stb_bt_back">返回</string>
    <string name="stb_tw_page">机顶盒</string>
    <string name="stb_bt_define">自定义</string>
    <string name="stb_bt_model">学习</string>
    <string name="stb_bt_control">控制</string>
    <string name="stb_bt_study">学习</string>
    <string name="stb_study_success">学习成功</string>
    <string name="stb_contro_success">控制成功</string>
    <string name="stb_off_line">离线</string>
    <string name="stb_studing">请按遥控器学习!</string>
    <string name="stb_page_error">页面错误</string>
    <string name="stb_bt_num1">1</string>
    <string name="stb_bt_num2">2</string>
    <string name="stb_bt_num3">3</string>
    <string name="stb_bt_num4">4</string>
    <string name="stb_bt_num5">5</string>
    <string name="stb_bt_num6">6</string>
    <string name="stb_bt_num7">7</string>
    <string name="stb_bt_num8">8</string>
    <string name="stb_bt_num9">9</string>
    <string name="stb_bt_num0">0</string>
    <string name="add_device_page">添加新设备</string>
    <string name="add_new_device_edit">修改信息</string>
    <string name="add_device_choice_model">选择模板</string>
    <string name="add_device_model_name">模板名字</string>
    <string name="add_device_define_name_hint">自定义名称</string>
    <string name="add_device_save">保 存</string>
    <string name="show_from_wx_tip">这个界面用于显示微信向第三方app请求显示的信息</string>
    <string name="choice_air_model_hert">制热</string>
    <string name="choice_air_model_code">制冷</string>
    <string name="choice_air_model_changeGas">换气</string>
    <string name="choice_air_model_Dehumidification">除湿</string>
    <string name="choice_air_model_Automatic">自动</string>
    <string name="choice_study_air_model">保存</string>
    <string name="choice_study_air_page">自定义学习</string>
    <string name="choice_study_air_title">请选择</string>
    <string name="choice_study_air_warm">25°C</string>
    <string name="define_air_study_success">学习成功</string>
    <string name="define_air_contro_success">控制成功</string>
    <string name="define_air_off_line">离线</string>
    <string name="define_air_studing">请按遥控器对应按键学习!</string>
    <string name="define_air_page_error">页面错误</string>
    <string name="add_device_dialog_title">请选择设备</string>
    <string name="add_device_dialog_inner">请先选择可用设备</string>
    <string name="add_device_dialog_choice_img">选择图片</string>
    <string name="add_device_dialog_no_name">提示!</string>
    <string name="add_device_dialog_no_name_message">设备名字不能为空且长度必须小于7</string>
    <string name="add_device_dialog_button_ok">确  定</string>
    <string name="mod_device_dialog_title">修改设备</string>
    <string name="mod_device_dialog_page_error">页面错误</string>
    <string name="mod_device_dialog_inner">请先选择可用设备</string>
    <string name="mod_device_dialog_no_name">提示！</string>
    <string name="mod_device_dialog_no_name_message">设备名字不能为空且长度必须小于7</string>
    <string name="mod_device_dialog_button_ok">确定</string>
    <string name="mod_device_dialog_mod_fail">提示！</string>
    <string name="mod_device_dialog_mod_fail_message">修改失败</string>
    <string name="custom_key_save">保存</string>
    <string name="custom_key_study_success">学习成功</string>
    <string name="custom_key_contro_success">控制成功</string>
    <string name="custom_key_off_line">离线</string>
    <string name="custom_key_studing">请按遥控器对应按键学习!</string>
    <string name="custom_key_page_error">页面错误</string>
    <string name="custom_key_order_study">请按序号学习</string>
    <string name="cutome_key_save_success">保存成功</string>
    <string name="custom_key_del_key">没有信息可保存!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_cc3_xsplash_screen">CC3XSplashScreen</string>
    <string name="cc3000_version_text">CC3000</string>
    <string name="alert_cc3x_title">提示</string>
    <string name="alert_invalid_input_title">没有网络</string>
    <string name="alert_successfully_connected">配置成功!请检查设备的是否指示灯全灭，如果全灭则到添加页面如能找到新设备即配置成功，可以开始使用；如果灯一直闪烁不熄灭，请查看常见问题对照解决或者重置设备重新配置。</string>
    <string name="alert_connection_failed">配置失败，请检查设备是否在配置模式或者检查配置时候路由器的密码是否正确。然后重置设备重新配置</string>
    <string name="alert_connection_timeout">连接超时!请将设备设置为配置模式后重新配置！</string>
    <string name="alert_successfully_failed">Failed to configure CC3000 device</string>
    <string name="alert_no_network_title">没有网络</string>
    <string name="control_btn_ok">OK</string>
    <string name="cc3x_string_ok">确定</string>
    <string name="title_activity_recetacle_page">RecetaclePage</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="about_us_version">版本号:</string>
    <string name="update_version">点击更新</string>
    <string name="about_server_phoneNumber">028-87820707</string>
    <string name="about_server">售后服务电话：</string>
    <string name="about_copyright1">云朵公司版权所有 </string>
    <string name="about_copyright2">版权@2008-2014云朵科技.版权所有</string>
    <string name="commondialog_tv_address">调整空调状态:</string>
    <string name="timing_repeat">重复:</string>
    <string name="timing_week">星期</string>
    <string name="timing_week_w1">一</string>
    <string name="timing_week_w2">二</string>
    <string name="timing_week_w3">三</string>
    <string name="timing_week_w4">四</string>
    <string name="timing_week_w5">五</string>
    <string name="timing_week_w6">六</string>
    <string name="timing_week_w7">日</string>
    <string name="timing_change">调  整</string>
    <string name="main_home">首页</string>
    <string name="main_more">更多</string>
    <string name="timming_off">设备离线，请返回到空调界面再次进入...</string>
    <string name="timing_back_succcess">定时成功</string>
    <string name="dialog_waiting">请稍候...</string>
</resources>