<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_navigation"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/bttimingback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bt_back_style"
            android:contentDescription="@null" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/mtimingName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <CheckBox
            android:id="@+id/bttimingModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/right"
            android:button="@null"
            android:gravity="center"
            android:text="@string/mod_device_dialog_button_ok" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="vertical" >

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <kankan.wheel.widget.WheelView
                android:id="@+id/passw_1"
                android:layout_width="90dip"
                android:layout_height="wrap_content" />

            <kankan.wheel.widget.WheelView
                android:id="@+id/passw_2"
                android:layout_width="90dip"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btTtiming_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/timing_change_style"
                android:gravity="center"
                android:text="@string/add_device"
                android:textColor="#48D1CC" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btTtiming_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/timing_change_style"
                android:gravity="center"
                android:text="@string/timing_change"
                android:textColor="#48D1CC" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:src="@drawable/temperature_line" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timing_repeat"
                android:textColor="#000"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/timing_show_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <!-- FrameLayout的id属性必须为 @android:id/tabcontent -->

            <TextView
                android:id="@+id/view1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/timing_week_w1" />

            <TextView
                android:id="@+id/view2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/timing_week_w2" />

            <TextView
                android:id="@+id/view3"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/timing_week_w3" />

            <TextView
                android:id="@+id/view4"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/timing_week_w4" />

            <TextView
                android:id="@+id/view5"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/timing_week_w5" />

            <TextView
                android:id="@+id/view6"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/timing_week_w6" />

            <TextView
                android:id="@+id/view7"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/timing_week_w7" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:src="@drawable/temperature_line" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <ListView
            android:id="@+id/timing_list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
        </ListView>
    </LinearLayout>

</LinearLayout>